# PLUME

./: .gitignore  LICENSE  NOTICE  README.md  base.Dockerfile  pyproject.toml  requirements.txt
analysis/: R_requirements.txt  compare.ipynb  dataset_from_features.ipynb  requirements.sh  requirements.txt  spark.ipynb
analysis/results/: analysisR.ipynb
scripts/: run_with_docker.sh  save_resnet50.sh  train_rcscombined_resnet.sh  train_rcscombined_resnet_features.sh
src/analysis/: __init__.py  combined.py  convnext.py  mlflow.py  plad.py  rcscombined.py  rcsplad.py  resnet50.py  vgg16.py
src/datasets/: __init__.py  base.py  cifar10.py  cifar100.py  features.py  spark.py  utils.py
src/metrics/: __init__.py  accuracy.py  auc.py  detailed_precision.py  threshold.py
src/misc/: base.py  checkpoint.py  context.py  losses.py  parser.py  trainer.py
src/models/: __init__.py  base.py  combined.py  convnext.py  plad.py  resnet50.py  vae.py  vgg16.py
src/models/backbones/: __init__.py  base.py  convnext.py  resnet50.py  utils.py  vgg16.py
src/models/classifiers/: base.py  classifier.py  leaky_classifier.py
src/models/cossim/: cscombined.py  csplad.py  rcscombined.py  rcsplad.py
src/tasks/: __init__.py  train_combined.py  train_cscombined.py  train_features.py  train_plad.py  train_rcscombined.py  train_rcsplad.py  utils.py
